# mcp-server-review

./: .build-release-mcp.example.yml  .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ai-minor-fixes.yml  ai-pr-review.yml
build_release_mcp/: __init__.py  config.py  findings.py  fix_runner.py  github_auth.py  github_writer.py  hosted_service.py  job_store.py  ops_tools.py  reconciliation.py  review_engine.py  review_runner.py  server.py
docs/: README.md  automation.md  hosted-service.md  pr-review-agent.md  quickstart.md
docs/tool-groups/: README.md  ci-diagnostics.md  database.md  dependencies.md  deployment-status.md  feature-flags.md  github-actions.md  kubernetes.md  observability.md  pr-review.md  release-notes-ownership.md  release-readiness.md
pr_review_mcp/: __init__.py  ops_tools.py  review_runner.py  server.py
tests/: test_config.py  test_findings.py  test_hosted_service.py  test_job_store.py  test_review_runner.py  test_server.py
