[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-review-mcp-server"
version = "0.1.0"
description = "A small stdio MCP server for GitHub pull request reviews."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Your Name" }]
dependencies = []

[project.scripts]
pr-review-mcp = "pr_review_mcp.server:main"

[tool.setuptools.packages.find]
include = ["pr_review_mcp*"]
