[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "build-release-mcp-server"
version = "0.1.0"
description = "A stdio MCP server for build, release, and GitHub pull request operations."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Your Name" }]
dependencies = []

[project.optional-dependencies]
dev = []

[project.scripts]
build-release-mcp = "build_release_mcp.server:main"
build-release-mcp-review = "build_release_mcp.review_runner:main"
build-release-mcp-service = "build_release_mcp.hosted_service:main"

[tool.setuptools.packages.find]
include = ["build_release_mcp*"]
